# BrowseCraft

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/scripts/: benchmark_browser_use_models.py  create_browser_profile.py  create_planet_minecraft_skill.py
backend/src/browsecraft_backend/: app.py  browser_use_client.py  chat_orchestrator.py  (+14 more)
backend/tests/: conftest.py  test_app_integration.py  test_chat_orchestrator.py  test_convex_client.py  test_demo_pipelines.py  test_geometry_primitives.py  test_headless_simulator.py  test_imagine_service.py  test_models.py  test_rl_agent_config.py  test_rl_augmentation.py  test_rl_collect_claude_trajectories.py  test_rl_curriculum.py  test_rl_grader.py  test_rl_hud_env_smoke.py  test_rl_import_hud_job.py  test_rl_reward.py  test_rl_stage_manifests.py  test_rl_task_generator.py  test_rl_text_qa.py  test_rl_trajectory_schema.py  test_schematic_parser.py  test_spatial_reasoning.py  test_sponsors.py  test_websocket_manager.py
sim/: .dockerignore  Dockerfile  env.py  eval_tasks.jsonl  hud.lock.yaml  pyproject.toml  remote_tasks.jsonl
sim/.hud/: deploy.json
sim/runs/: baseline_episodes.csv  baseline_episodes_recheck.csv  baseline_episodes_v2.csv  baseline_summary_recheck.csv  baseline_summary_v2.csv  claude_seed999_per1_cached.jsonl  claude_seed999_per1_cached_v2.jsonl  claude_seed999_per1_v2.jsonl
sim/scripts/: analyze_baseline.py  analyze_trajectory_comparison.py  collect_claude_trajectories.py  collect_text_qa_trajectories.py  export_rft_tasks.py  export_stage_manifests.py  export_trajectories.py  generate_hud_tasks.py  generate_prompt_augmentations.py  generate_prompt_variants.py  generate_text_qa_tasks.py  import_hud_job.py  run_baseline_eval.py  run_hud_rft.py  run_hud_smoke.py
(+64 files in other folders)
